[package]
name = "touchppp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
counted-array = "0.1.2"
futures = "0.3.30"
getopts = "0.2.21"
tokio = { version = "1.37.0", features = ["full"] }

[lints.rust]
dead_code = "allow"
