[package]
name = "touchppp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
clap-verbosity-flag = { git = "https://github.com/clap-rs/clap-verbosity-flag", version = "3.0.2" }
env_logger = "0.11.8"
futures = "0.3.30"
log = "0.4.27"
tokio = { version = "1.37.0", features = ["full"] }

[lints.rust]
dead_code = "allow"
